--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,413 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  font-family: "Inter", sans-serif;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  background-color: #ffff;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.app {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 50px;
+}
+
+.app-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0 1rem 0;
+}
+
+.app-title img {
+  width: 100px;
+  height: auto;
+  object-fit: cover;
+}
+
+.app-title h1 {
+  font-size: 54px;
+  color: #105f5c;
+}
+
+.left,
+.right {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+input,
+textarea {
+  outline: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  padding: 5px 10px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-radius: 4px;
+  transition: 0.4s;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+button:hover {
+  background-color: #be0a1c;
+}
+
+h2,
+h3 {
+  color: #333;
+}
+
+.target-list {
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.target-list-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.target-list-title button {
+  height: 2rem;
+  padding: 0;
+  background-color: transparent;
+}
+
+.target-list-title button:hover {
+  opacity: 0.7;
+}
+
+.target-list h3 {
+  margin-bottom: 10px;
+}
+
+.target-list ul li {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  padding: 10px;
+  background-color: #e9ecef;
+  border-radius: 8px;
+}
+
+.target-title {
+  word-wrap: break-word;
+}
+
+/* .target-title-done {
+  word-break: break-all;
+  text-decoration: line-through;
+} */
+
+.target-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+}
+
+.target-item button {
+  background-color: #dc3545;
+  border: none;
+  color: #ffffff;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.target-item button:hover {
+  background-color: #c82333;
+}
+
+.todo-list {
+  background-color: #e9ecef;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.todo-list h3 {
+  margin-bottom: 2rem;
+}
+
+.todo-item {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  align-items: center;
+  padding: 10px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+}
+
+.todo-item p {
+  word-wrap: break-word;
+}
+
+.todo-item span {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.editar-todo {
+  background-color: #218838;
+}
+
+.editar-todo:hover {
+  background-color: #28a745;
+}
+
+.todo-item span button {
+  border: none;
+  color: white;
+  padding: 4px 8px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.target-form {
+  background-color: #105f5c;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.target-form h3 {
+  color: #fff;
+}
+
+.target-form input,
+.target-form textarea {
+  width: 90%;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ced4da;
+  border-radius: 6px;
+}
+
+.target-form button {
+  background-color: #24a19c;
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.target-form button:hover {
+  background-color: #31c5c0;
+}
+.todo-form {
+  background-color: #24a19c;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.todo-form h3 {
+  color: #fff;
+}
+
+.todo-form input,
+.todo-form textarea {
+  width: 90%;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ced4da;
+  border-radius: 6px;
+}
+
+.todo-form button {
+  background-color: #105f5c;
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.todo-form button:hover {
+  background-color: #09504d;
+}
+
+.no-selected-target {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  background-color: #797979;
+  border-radius: 8px;
+  padding: 10px 20px;
+  color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.targetDone {
+  border: solid 1px #28a745;
+  padding: 10px;
+  border-radius: 6px;
+}
+
+.target-actions {
+  display: flex;
+  gap: 8px;
+}
+
+.target-actions button {
+  padding: 4px 8px;
+}
+
+.show-todos {
+  background-color: #bebebe;
+  transition: 0.4s;
+}
+
+.show-todos:hover {
+  background-color: #979595;
+}
+
+.complete-todo {
+  background-color: #1fa73f;
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 6px;
+}
+
+.edit-form {
+  background-color: #e2e3e5;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 2rem;
+}
+
+.edit-form h3 {
+  margin-bottom: 2rem;
+  text-align: start;
+}
+
+.edit-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.edit-form form input,
+.edit-form form textarea {
+  border-radius: 6px;
+  border: none;
+  padding: 10px;
+}
+
+.edit-form form button{
+  padding: 8px;
+  background-color: #d1b205;
+}
+
+.edit-form form button:hover{
+  background-color: #b69c08;
+}
+
+.edit-form-header {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  align-items: center;
+}
+
+.edit-form-header button {
+  padding: 0;
+  background-color: transparent;
+  padding-bottom: 12px;
+}
+
+.edit-form-header button:hover {
+  opacity: 0.7;
+  background-color: transparent;
+}
+
+.edit-checkbox input {
+  justify-content: center;
+  width: 18px;
+  height: 18px;
+}
+
+.edit-checkbox {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+@media screen and (max-width: 900px) {
+  .app {
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 0px;
   }
-  a:hover {
-    color: #747bff;
+
+  .left,
+  .right {
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .todo-form button {
+    width: 95%;
+  }
+
+  .no-selected-target {
+    margin-top: 2rem;
+    width: 88%;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .todo-item {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .todo-item p {
+    margin: 0;
   }
 }
